# virtual_joystick

./: .gitignore  Cargo.toml  Makefile.toml  README.md  default.nix  flake.nix  release.toml  rust-toolchain.toml  rustfmt.toml  sc.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
examples/: invisible.rs  multiple.rs  simple.rs  tint.rs
examples/multiple_joysticks_mobile/: Cargo.toml  README.md
examples/multiple_joysticks_mobile/android/: AndroidManifest.xml  config.gradle  gradle.properties  settings.gradle.kts
examples/multiple_joysticks_mobile/android/app/: build.gradle.kts
examples/multiple_joysticks_mobile/android/app/src/main/: AndroidManifest.xml
examples/multiple_joysticks_mobile/android/app/src/main/kotlin/com/sergioribera/multiple/: MainActivity.kt
examples/multiple_joysticks_mobile/android/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
examples/multiple_joysticks_mobile/android/src/com/sergioribera/kill_errors/: MainActivity.kt
examples/multiple_joysticks_mobile/src/: lib.rs
examples/multiple_joysticks_pc/: Cargo.toml  README.md
examples/multiple_joysticks_pc/src/: main.rs
examples/simple_mobile/: Cargo.toml  README.md
examples/simple_mobile/android/: AndroidManifest.xml  build.gradle  config.gradle  gradle.properties  settings.gradle.kts
examples/simple_mobile/android/app/: CMakeLists.txt  build.gradle.kts
examples/simple_mobile/android/app/src/main/: AndroidManifest.xml
examples/simple_mobile/android/app/src/main/cpp/: dummy.cpp
examples/simple_mobile/android/app/src/main/kotlin/com/sergioribera/simple/: MainActivity.kt
examples/simple_mobile/android/gradle/: libs.versions.toml
examples/simple_mobile/android/src/com/sergioribera/kill_errors/: MainActivity.kt
examples/simple_mobile/src/: lib.rs
examples/simple_pc/: Cargo.toml  README.md
examples/simple_pc/src/: main.rs
src/: action.rs  behavior.rs  behaviour.rs  bundles.rs  components.rs  input.rs  joystick.rs  lib.rs  systems.rs  ui.rs  utils.rs
src/ui/: bundles.rs  systems.rs
