[package]
name = "virtual_joystick"
version = "2.0.1"
edition = "2021"
categories = ["game-engines", "input", "gui"]
description = "Bevy virtual Joystick for mobile games"
exclude = ["default_assets/", ".github/", "examples/*_mobile/"]
homepage = "https://github.com/SergioRibera/virtual_joystick"
keywords = ["game", "ui", "gamedev", "bevy", "input"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SergioRibera/virtual_joystick"
rust-version = "1.67.0"

[[example]]
name = "simple"
required-features = ["inspect"]

[[example]]
name = "multiple"
required-features = ["inspect"]

[features]
default = ["serialize"]
inspect = ["bevy-inspector-egui"]
serialize = ["serde"]

[dependencies]
bevy = { version = "0.11" }
bevy-inspector-egui = { version = "0.19", optional = true }
serde = { version = "^1", features = ["derive"], optional = true }
