[package]
name = "virtual_joystick"
version = "2.1.0"
edition = "2021"
categories = ["game-engines", "input", "gui"]
description = "Bevy virtual Joystick for mobile games"
exclude = ["default_assets/", ".github/", "examples/*_mobile/"]
homepage = "https://github.com/SergioRibera/virtual_joystick"
keywords = ["game", "ui", "gamedev", "bevy", "input"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SergioRibera/virtual_joystick"
rust-version = "1.67.0"

[[example]]
name = "simple"
required-features = ["inspect"]

[[example]]
name = "multiple"
required-features = ["inspect"]

[[example]]
name = "invisible"
required-features = ["inspect"]

[features]
default = ["serde"]
inspect = ["bevy-inspector-egui"]
serde = ["dep:serde"]

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_render",
    "bevy_ui",
] }
bevy-inspector-egui = { version = "0.23", optional = true }
serde = { version = "^1", features = ["derive"], optional = true }

[dev-dependencies]
bevy = "0.13"
