[package]
name = "multiple_joysticks_mobile"
version = "0.1.0"
edition = "2021"

[lib]
name = "multiple_joysticks_mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bevy = "0.10.1"
virtual_joystick = { path = "../../" }

[package.metadata.android]
package = "com.sergioribera.multiple_joysticks"
apk_name = "Multiple_Joysticks"
assets = "./assets"
resources = "./assets/android-res"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "Multiple Joystick"

#
# Important: this solve the [issue](https://github.com/bevyengine/bevy/issues/8322)
#
[patch.crates-io]
android-activity = { git = "https://github.com/MarijnS95/android-activity/", branch = "na-resize" }
